--- a/04_변수/변수.md
+++ b/04_변수/변수.md
@@ -1,7 +1,7 @@
 ## 04_변수
 리액트 개발을 하다 자바스크립트에 대한 이해도가 부족한 것 같아 시중에서 가장 유명하다는 자바스크립트 책을 하나 뽑아 매일 하루에 한장씩 정리하려고 한다. 
 
-### 변수란 무엇인가?
+## 변수란 무엇인가?
 변수는 프로그래밍 언어에서 데이터를 관리하기 위한 핵심 개념
 자바스크립트 코드를 실행하려면 자바스크립트 엔진을 거쳐 실행하게 되는데 이는 평가라는 과정을 거치게 됨
 (평가를 하려면 코드 내부의 기호(리터럴과 연산자, 표현식의 의미를 파싱(해석)할 줄 알아야 함)
@@ -13,8 +13,7 @@
 
 변수는 하나의 값을 저장하기 위해 확보한 메모리 공간 자체 또는 메모리 공간을 식별하기 위해 붙인 이름
 
-### 식별자
---
+## 식별자
 변수 이름이 곧 식별자이다.
 식별자는 어떤 값을 구별해서 식별할 수 있는 고유한 이름을 말한다.
 식별자는 값이 아니라 메모리 주소를 기억하고 있다. 식별자는 메모리 주소에 붙인 이름.
@@ -22,12 +21,10 @@
 변수, 함수, 클래스 모두 식별자이며 이러한 식별자는 네이밍 규칙을 준수해야 하며, 선언에 의해 자바스크립트 엔진에 식별자의 존재를 알리게 됨.
 
 
-### 변수 선언
----
+## 변수 선언
 변수를 선언한다는 것은 값을 저장하기 위한 메모리 공간을 확보하고 변수 이름과 확보된 메모리 공간의 주소를 연결해서 값을 저장할 수 있게 준비하는 것이다. 변수 선언에 의해 확보된 메모리 공간은 확보가 해제되기 전까지는 누구보다 확보된 메모리 공간을 사용할 수 없도록 보호되므로 안전하게 사용할 수 있다. 변수를 사용하려면 선언이 필요하다. 변수를 선언할 때는 var, let, const 키워드를 사용한다. ES6에서 let, const 키워드가 도입되기 이전까지 var키워드는 자바스크립트에서 변수를 선언할 수 있는 유일한 키워드였다.
 
-### var 키워드의 단점
----
+## var 키워드의 단점
 블록레벨 스코프를 지원하지 않고 함수레벨스코프를 지원한다..
 이로 인해 의도치 안헥 전역 변수가 선언되어 심각한 부작용이 발생하기도 한다.
 
@@ -76,8 +73,7 @@
 변수 이름을 비롯한 모든 식별자는 실행 컨텍스트에 등록됨. 실행 컨텍스트는 자바스크립트 엔진이 소스코드를 평가하고 실행하기 위해 필요한 환경을 제공하고 코드의 실행결과를 실제로 관리하는 영역. 자바스크립트 엔진은 실행 컨텍스트를 통해 식별자와 스코프를 관리함
 
 
-### 변수 선언의 실행 시점과 변수 호이스팅
----
+## 변수 선언의 실행 시점과 변수 호이스팅
 ```javascript
 console.log(score); // undefined
 
@@ -88,8 +84,7 @@ var score; //변수 선언문
 이처럼 변수 선언문이 코드의 선두로 끌어 올려진 것처럼 동작하는 자바스크립트의 고유의 특징을 변수 호이스팅이라고 한다. 
 
 
-### 값의 할당 
----
+## 값의 할당 
 변수에 값을 할당할대는 할당 연산자를 사용한다. 할당 연산자는 우변의 값을 좌변의 변수에 할당한다.
 ```javascript
 var score; // 변수 선언
@@ -124,8 +119,7 @@ foo = 100; //TypeError
 
 변수에 값을 재할당하면 이전에 값은 메모리에 남아있다가 가비지 콜렉터에 의해 사용되지 않는 메모리를 해제하여 메모리 누수를 방지한다.
 
-### 식별자 네이밍 규칙
----
+## 식별자 네이밍 규칙
 앞에서 언급했듯이 식별자는 어떤 값을 구별해서 식별해 낼 수 있는 고유한 이름을 말한다. 식별자는 네이밍 규칙을 준수해야 한다.
 
 
