--- a/04_변수/변수.md
+++ b/04_변수/변수.md
@@ -103,8 +103,7 @@ var score = 80; //변수 선언과 값의 할당
 이때, 주의할 점은 변수에 값을 할당할때는 이전 값 undefined 가 저장되어 있던 메모리 공간을 지우고 그 메모리 공간에 값 80을 새롭게 저장하는 것이 아니라 새로운 메모리 공간을 확보하고 그곳에 할당 값 80을 저장한다는 점에 주의하자.
 
 
-### 값의 재할당
-----
+## 값의 재할당
 이번에는 다음과 같이 score 변수에 새로운 값을 재할당해보자. 재할당이란 이미 값이 할당되어 있는 변수에 새로운 값을 또 다시 할당하는 것을 말한다.
 var키워드로 선언한 변수는 재할당 가능 .엄밀히 말하면 변수에 처음으로 값을 할당하는 것도 사실은 재할당임.
 
