--- a/13_스코프/스코프.md
+++ b/13_스코프/스코프.md
@@ -25,7 +25,7 @@
 
 ## 함수 레벨 스코프
 
-- 자바스크립트에서는 함수에 의해서만 지역 스코프가 생성된다.
+- var에서만 함수에 의해서만 지역 스코프가 생성된다.
 - C,Java 등 대부분의 프로그래밍 언어는 모든 코드 블록이 지역 스코프를 만든다. -> 블록 레벨 스코프
 - var 키워드로 선언된 변수는 오로지 함수의 코드 블록만을 지역 스코프로 인정하지만 ES6에서 도입된 let, const 키워드는 블록 레벨 스코프를 지원한다.
 
