--- a/14_전역 변수의 문제점/전역 변수의 문제점.md
+++ b/14_전역 변수의 문제점/전역 변수의 문제점.md
@@ -59,6 +59,7 @@ console.log(x); // global
 3. 모듈 패턴
 
 - 클래스를 모방해서 관련이 있는 변수와 함수를 모아 실행함수로 감싸 하나의 모듈을 만든다.
+- 캡슐화는 객체의 상태를 나타내느 프로퍼티와 프로퍼티를 참조하고 조작할 수 이는 동작이다.
 - 캡슐화를 통해 특정 프로퍼티나 메서드를 감출 수 있는 정보은닉이 가능
 - 클로저에서 자세히 살펴볼 수 있음
 
@@ -66,3 +67,17 @@ console.log(x); // global
 
 - ES6에서는 전역변수를 사용할 수 없다.
 - 파일 자체의 독자적 모듈 스코프 제공하기 때문
+
+
+Q : let이 호이스팅이 발생한 증거가 무엇인가?
+
+```javascript
+let x = 1;
+console.log(x)
+function foo() {
+console.log(x);
+let x = 10;
+};
+sex();
+```
+- let이 호이스팅이 발생하지 않는다면 1을 출력하게 된다.
