--- a/13_스코프/스코프.md
+++ b/13_스코프/스코프.md
@@ -17,7 +17,7 @@
 ## 스코프 체인
 
 - 스코프가 함수의 중첩에 의해 계층적 구조를 갖아 함수의 중첩이 발생하게 된다.
-- 이렇게 하나의 계층적 구조로 연결된 것을 스코프 체인이라고 한다.
+- 이렇게 하나의 계층적 구조로 연결된 것을 스코프 체인이라고 함.
 - 자바스크립트 엔진은 스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다.
 - 상위 스코프로 갈 수로 전역이고 하위 스코프로 갈 수록 지역이라고 생각하면 된다.
 - 스코프 체인은 물리적인 실체로 존재한다.(스코프 체인은 실행 컨텍스트의 렉시컬 환경을 단방향으로 연결)
