--- a/14_전역 변수의 문제점/전역 변수의 문제점.md
+++ b/14_전역 변수의 문제점/전역 변수의 문제점.md
@@ -3,7 +3,7 @@
 ## 변수의 생명주기
 
 - 변수는 선언에 의해 생성되고 할당을 통해 값을 갖고 언젠가 소멸한다. 이를 생명주기라고 한다.
-- 함수를 호출하기 전까진 변수 선언문이 실행되지않으므로 변수가 생성되지 않는다.
+- 함수를 호출하기 전까진 변수 선언문이 실행되지않으므로 변수가 생성되지 않음.
 - 변수 선언은 코드가 한 줄씩 실행되는 시점인 런타임에 실행되는 것이 아니라 런타임 이전단게에서 자바스크립트 엔진에 의해 먼저 실행된다.
 - 지역변수의 생명주기는 함수의 생명주기와 일치
 - 변수의 생명주기는 메모리 공간이 확보된 시점부터 메모리 공간이 해체되어 가용 메모리 풀에 반환되는 시점까지이다.
@@ -68,16 +68,16 @@ console.log(x); // global
 - ES6에서는 전역변수를 사용할 수 없다.
 - 파일 자체의 독자적 모듈 스코프 제공하기 때문
 
-
 Q : let이 호이스팅이 발생한 증거가 무엇인가?
 
 ```javascript
 let x = 1;
-console.log(x)
-function foo() {
 console.log(x);
-let x = 10;
-};
+function foo() {
+  console.log(x);
+  let x = 10;
+}
 sex();
 ```
+
 - let이 호이스팅이 발생하지 않는다면 1을 출력하게 된다.
