--- a/19_프로토타입/프로토타입.md
+++ b/19_프로토타입/프로토타입.md
@@ -62,3 +62,17 @@ console.log(circle1.getArea === circle2.getArea);
 #### \_ _ proto _ \_ 접근자 프로퍼티를 코드 내에서 직접 사용하는 것은 권장하지 않는다.
 
 ### 함수 객체의 prototype 프로퍼티
+
+### 프로토타입 체인
+
+- 자바스크립트는 객체의 프로퍼티에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티가 없다면 [[Prototype]] 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색 -> 이를 프로토타입 체인이라고 함
+
+
+```javascript
+//hasOwnProperty 는 Object.prototype의 메서드이다.
+//me 객체는 프로토타입 체인을 따라 hasOwnProperty 메서드를 검색하여 사용한다.
+me.hasOwnProperty('name'); // true
+
+```
+1. 먼저 hasOwnProperty 메서드를 호출한 me 객체에서 hasOwnProperty 메서드를 검색한다.
+2. me 객체에는 hasOwnProperty 메서드가 없으므로 
